--- a/style.css
+++ b/style.css
@@ -632,6 +632,10 @@ main {
     text-align: justify;
 }
 
+.post a {
+    text-decoration: underline;
+}
+
 #ez-toc-container {
     margin-left: auto;
     margin-right: auto;
